--- a/style2.css
+++ b/style2.css
@@ -1006,3 +1006,47 @@ aside .download-btn {
   box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
 }
+
+
+.games{
+display: flex;
+height: 250px;
+width: 350px;
+border-radius: 8px;
+position: relative;
+top:140px;
+
+}
+
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .button-33, .button-34, .button-35, .button-36, .button-37, .button-38 {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .games {
+    height: 200px;
+    width: 100%;
+  }
+
+  img {
+    width: 70%;
+    height: auto;
+  }
+}
+/* CSS */
+
+
+
+  img {
+    border-radius: 8px;
+    width: 70%;
+    height: auto;
+  }
