--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@i@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 *,
 *::before,
@@ -986,4 +986,5 @@ aside .download-btn {
   width: 30px; 
   cursor: pointer; 
 }
+
 
